--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:background="#212120"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.catalizeapp.catalize_ss25.LoginActivity"
+    tools:context="com.catalizeapp.catalize_ss16_v5.LoginActivity"
     android:weightSum="1">
 
     <!-- Login progress -->
