--- a/app/src/main/res/layout/activity_report_bug.xml
+++ b/app/src/main/res/layout/activity_report_bug.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.catalizeapp.catalize_ss25.ReportBug">
+    tools:context="com.catalizeapp.catalize_ss16_v5.ReportBug">
 
     <android.support.v7.widget.Toolbar
         android:layout_height="wrap_content"
