--- a/app/src/main/res/layout/nav_header_nav.xml
+++ b/app/src/main/res/layout/nav_header_nav.xml
@@ -32,14 +32,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Name"
         android:textSize="18dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/textViewPerson"
+        android:text="Name" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text = "Email"/>
 
 </LinearLayout>
