--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3785ad</color>
     <color name="colorAccent">#454444</color>
     <color name="black_overlay">#66000000</color>
+    <color name = "black">#FF000000</color>
 </resources>
