--- a/app/src/main/res/layout/activity_report_bug.xml
+++ b/app/src/main/res/layout/activity_report_bug.xml
@@ -10,48 +10,76 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.catalizeapp.catalize_ss16_v5.ReportBug">
 
-    <android.support.v7.widget.Toolbar
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/toolbar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-
-    <EditText
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="43dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp"
-        android:paddingTop="10dp"
-        android:text="Report a Bug"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:gravity="center_horizontal"
-        android:textStyle="italic" />
-
-    <Button
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:textSize="19sp"
-        android:text="Send Report"
-        android:textStyle="bold"
+        android:layout_gravity="center_horizontal|top"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/send_report" />
+        android:layout_alignParentTop="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Report Bug"
+            android:id="@+id/textView2"
+            android:paddingTop="18dp"
+            android:paddingBottom="20dp"
+            android:textSize="25sp"
+            android:textAlignment="center"
+            android:textColor="#FF2FA4D7"
+            android:layout_gravity="center_horizontal" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView2"
+            android:layout_gravity="center_horizontal"
+            android:clickable="true"
+            android:fillViewport="true" >
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true" >
+
+                <EditText
+                    android:focusableInTouchMode="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:hint="Please describe the failure in detail..."
+                    android:paddingBottom="30dp"
+                    android:paddingRight="7dp"
+                    android:paddingLeft="7dp"
+                    android:textColor="#000000"
+                    android:background="@android:color/transparent"
+                    android:id="@+id/editText2"
+                    android:textColorHint="#C1C3B8"
+                    android:nestedScrollingEnabled="true"
+                    android:scrollIndicators="top|right"
+                    android:layout_gravity="center_horizontal|top" />
+
+                <Button
+                    style="?android:textAppearanceSmall"
+                    android:id="@+id/send_report"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:text="Send"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="5dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal|bottom" />
+            </FrameLayout>
+        </ScrollView>
+    </LinearLayout>
 </RelativeLayout>
