--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,81 +17,103 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 
-    <ImageView
-        android:id="@+id/imageViewEdit"
-        android:layout_width="120dp"
-        android:layout_height="130dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/user2"
-        android:scaleType="fitXY"
-        android:layout_row="6"
-        android:layout_column="0"
-        android:layout_gravity="center_vertical"
-        android:layout_alignTop="@+id/toolbar"
-        android:layout_centerHorizontal="true" />
-    <LinearLayout
-        android:background="#ffffff"
-        android:id="@+id/layout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="bottom|end"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_below="@+id/imageViewEdit"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="46dp">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="First name"
-        android:ems="10"
-        android:id="@+id/first_name_edit"
-        android:textSize="20sp"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/black"
-        android:textCursorDrawable="@null"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Last name"
-        android:ems="10"
-        android:id="@+id/last_name_edit"
-        android:textSize="20sp"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/black"
-        android:textCursorDrawable="@null"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Email"
-        android:ems="10"
-        android:id="@+id/email_edit"
-        android:textSize="20sp"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/black"
-        android:textColorHighlight="#ffffff"
-        android:textCursorDrawable="@null"/>
-    </LinearLayout>
-
-    <Button
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:textSize="19sp"
-        android:text="Save"
-        android:textStyle="bold"
-        android:id="@+id/save_prefs"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView3"
+        android:layout_gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:fillViewport="true">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="bottom|end"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignBottom="@+id/scrollView3">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <ImageView
+                    android:id="@+id/imageViewEdit"
+                    android:layout_width="120dp"
+                    android:layout_height="130dp"
+                    android:paddingTop="@dimen/nav_header_vertical_spacing"
+                    android:src="@drawable/user"
+                    android:scaleType="fitXY"
+                    android:layout_row="6"
+                    android:layout_column="0"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_alignTop="@+id/toolbar"
+                    android:layout_centerHorizontal="true" />
+
+                <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="First name"
+                android:ems="10"
+                android:id="@+id/first_name_edit"
+                android:textSize="20sp"
+                android:textColorHint="@color/black"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/black"
+                android:textCursorDrawable="@null"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="Last name"
+                android:ems="10"
+                android:id="@+id/last_name_edit"
+                android:textSize="20sp"
+                android:textColorHint="@color/black"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/black"
+                android:textCursorDrawable="@null"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="Email"
+                android:ems="10"
+                android:id="@+id/email_edit"
+                android:textSize="20sp"
+                android:textColorHint="@color/black"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/black"
+                android:textColorHighlight="#ffffff"
+                android:textCursorDrawable="@null"/>
+
+                <Button
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimary"
+                    android:textColor="#ffffff"
+                    android:textSize="19sp"
+                    android:text="Save"
+                    android:textStyle="bold"
+                    android:id="@+id/save_prefs"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center_horizontal|bottom" />
+
+            </LinearLayout>
+
+        </FrameLayout>
+    </ScrollView>
 
 </RelativeLayout>
