--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -14,13 +14,16 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/space" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center_horizontal|top"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/space">
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,37 +37,55 @@
             android:textColor="#FF2FA4D7"
             android:layout_gravity="center_horizontal" />
 
-        <EditText
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:paddingRight="7dp"
-            android:paddingLeft="7dp"
-            android:textColor="#000000"
-            android:background="@android:color/transparent"
-            android:id="@+id/prompt"
-            android:textColorHint="#C1C3B8"
-            android:nestedScrollingEnabled="true"
-            android:scrollIndicators="top|right" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView"
+            android:layout_gravity="center_horizontal"
+            android:clickable="true"
+            android:fillViewport="true">
 
-    <Button
-        android:id="@+id/send"
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:text="Send"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="5dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal|bottom" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:paddingBottom="30dp"
+                    android:paddingRight="7dp"
+                    android:paddingLeft="7dp"
+                    android:textColor="#000000"
+                    android:background="@android:color/transparent"
+                    android:id="@+id/prompt"
+                    android:textColorHint="#C1C3B8"
+                    android:nestedScrollingEnabled="true"
+                    android:scrollIndicators="top|right"
+                    android:layout_gravity="center_horizontal|top" />
+
+                <Button
+                    android:id="@+id/send"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:text="Send"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="5dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal|bottom" />
+            </FrameLayout>
+        </ScrollView>
+
+    </LinearLayout>
 
 </RelativeLayout>
