--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -31,6 +31,7 @@
 
             <LinearLayout
                 android:id="@+id/layout"
+                android:nestedScrollingEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -38,11 +39,12 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignBottom="@+id/scrollView3">
+                android:layout_alignBottom="@+id/scrollView3"
+                android:scrollIndicators="right">
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
+                    android:layout_height="1dp"
                     android:layout_gravity="center_horizontal" />
 
                 <ImageView
@@ -63,9 +65,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="First name"
-                android:ems="10"
+                android:ems="8"
                 android:id="@+id/first_name_edit"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textColorHint="@color/black"
                 android:backgroundTint="@color/black"
                 android:textColor="@color/black"
@@ -75,9 +77,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="Last name"
-                android:ems="10"
+                android:ems="8"
                 android:id="@+id/last_name_edit"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textColorHint="@color/black"
                 android:backgroundTint="@color/black"
                 android:textColor="@color/black"
@@ -87,9 +89,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="Email"
-                android:ems="10"
+                android:ems="8"
                 android:id="@+id/email_edit"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textColorHint="@color/black"
                 android:backgroundTint="@color/black"
                 android:textColor="@color/black"
@@ -98,8 +100,8 @@
 
                 <Button
                     style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                     android:textColor="#ffffff"
                     android:textSize="19sp"
@@ -108,8 +110,7 @@
                     android:id="@+id/save_prefs"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_gravity="center_horizontal|bottom" />
+                    android:layout_alignParentEnd="true" />
 
             </LinearLayout>
 
