--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -58,45 +58,68 @@
                     android:layout_column="0"
                     android:layout_gravity="center_horizontal"
                     android:layout_alignTop="@+id/toolbar"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:longClickable="true" />
 
                 <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="First name"
-                android:ems="8"
-                android:id="@+id/first_name_edit"
-                android:textSize="16sp"
-                android:textColorHint="@color/black"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/black"
-                android:textCursorDrawable="@null"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="Last name"
-                android:ems="8"
-                android:id="@+id/last_name_edit"
-                android:textSize="16sp"
-                android:textColorHint="@color/black"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/black"
-                android:textCursorDrawable="@null"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="Email"
-                android:ems="8"
-                android:id="@+id/email_edit"
-                android:textSize="16sp"
-                android:textColorHint="@color/black"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/black"
-                android:textColorHighlight="#ffffff"
-                android:textCursorDrawable="@null"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="First name"
+                    android:ems="8"
+                    android:id="@+id/first_name_edit"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/black"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@color/black"
+                    android:textCursorDrawable="@null"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="Last name"
+                    android:ems="8"
+                    android:id="@+id/last_name_edit"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/black"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@color/black"
+                    android:textCursorDrawable="@null"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="Email"
+                    android:ems="8"
+                    android:id="@+id/email_edit"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/black"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@color/black"
+                    android:textColorHighlight="#ffffff"
+                    android:textCursorDrawable="@null"/>
+
+                <Button
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:textColor="#ffffff"
+                    android:textSize="19sp"
+                    android:text="Change Picture"
+                    android:textStyle="bold"
+                    android:id="@+id/picture"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center_horizontal"
+                    android:clickable="true" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <Button
                     style="?android:textAppearanceSmall"
