--- a/app/src/main/res/menu/activity_nav_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_drawer.xml
@@ -7,6 +7,10 @@
             android:id="@+id/contacts"
             android:icon="@drawable/ic_contacts"
             android:title="@string/contacts"/>
+        <item
+            android:id="@+id/log"
+            android:icon="@drawable/ic_contacts"
+            android:title="Activity Log"/>
 
         <item
             android:id="@+id/settings"
