--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -5,7 +5,6 @@
     android:padding="@dimen/activity_horizontal_margin"
     tools:context="com.catalizeapp.catalize_ss16_v5.PagerActivity$PlaceholderFragment">
 
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -37,10 +36,13 @@
             style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="22dp"
             android:textColor="@android:color/white"
-            tools:text="Page One" />
+            tools:text="Page One"
+            android:gravity="center" />
 
         <TextView
+            android:id="@+id/section"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
