--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="yellow">#FFEB3B</color>
     <color name="amber">#FFC107</color>
     <color name="orange">#FF9800</color>
+    <color name="white">#FFFFFF</color>
     <color name="deep_orange">#FF5722</color>
 </resources>
