--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -11,8 +11,8 @@
 
         <ImageView
             android:id="@+id/section_img"
-            android:layout_width="250dp"
-            android:layout_height="390dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="top|center"
             android:adjustViewBounds="true"
             android:background="@drawable/contacts"
@@ -28,7 +28,8 @@
         android:layout_gravity="bottom"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/section_label"
@@ -45,8 +46,8 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:alpha="0.7"
+            android:layout_marginTop="5dp"
+            android:alpha="0.5"
             android:gravity="center"
             android:text="Add a long description here about your app's important feature."
             android:textColor="@android:color/white" />
