--- a/app/src/main/res/menu/activity_nav_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_drawer.xml
@@ -5,28 +5,22 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/contacts"
-            android:icon="@drawable/ic_contacts"
+            android:icon="@drawable/nav"
             android:title="@string/contacts"/>
         <item
             android:id="@+id/log"
-            android:icon="@drawable/ic_contacts"
+            android:icon="@drawable/log2"
             android:title="Activity Log"/>
 
         <item
-            android:id="@+id/settings"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/settings"            >
-        </item>
-
-        <item
             android:id="@+id/bug"
-            android:icon="@drawable/ic_report_bug"
+            android:icon="@drawable/bug"
             android:title="@string/report_bug" >
         </item>
 
         <item
             android:id="@+id/log_out"
-            android:icon="@drawable/ic_log_out"
+            android:icon="@drawable/logout"
             android:title="@string/log_out" >
         </item>
     </group>
