--- a/app/src/main/res/layout/activity_report_bug.xml
+++ b/app/src/main/res/layout/activity_report_bug.xml
@@ -22,11 +22,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Report Bug"
+            android:text="Good things, bad things, missing things - let us know!"
             android:id="@+id/textView2"
             android:paddingTop="18dp"
             android:paddingBottom="20dp"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textAlignment="center"
             android:textColor="#FF2FA4D7"
             android:layout_gravity="center_horizontal" />
@@ -50,8 +50,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
                     android:ems="10"
-                    android:hint="Please describe the failure in detail..."
-                    android:paddingBottom="30dp"
+                    android:hint=""
                     android:paddingRight="7dp"
                     android:paddingLeft="7dp"
                     android:textColor="#000000"
